test/bad/generics/call05.px

func f<A>(g: A->A->A) def
    return

f(abs)
